1. Update logic of building query 2. Fix getView method; Add viewHolder pattern

--- a/app/src/main/res/layout/book_activity.xml
+++ b/app/src/main/res/layout/book_activity.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/inputTV"
@@ -13,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/input"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
     <EditText
         android:id="@+id/et"
@@ -21,23 +20,22 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="8dp"
+        android:autofillHints=""
         android:inputType="textMultiLine"
-        android:textSize="16sp"
-        android:autofillHints="" />
+        android:textSize="16sp" />
 
 
+    <CheckBox
+        android:id="@+id/authorCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/author" />
 
-        <CheckBox
-            android:id="@+id/authorCB"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/author" />
-
-        <CheckBox
-            android:id="@+id/titleCB"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/title" />
+    <CheckBox
+        android:id="@+id/titleCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/title" />
 
 
     <Button
@@ -45,9 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textSize="16sp"
+        android:onClick="onClick"
         android:text="@string/search"
-        android:onClick="onClick">
-    </Button>
+        android:textSize="16sp"/>
 
 </LinearLayout>
